--- a/css/host.css
+++ b/css/host.css
@@ -1,6 +1,27 @@
 #emoji-popup {
     width: 50px;
     height: 50px;
-    background-color: #ccc;
+    background-repeat:no-repeat;
+    background-position:center;
+    background-size: 100% 100%;
     position: absolute;
+    z-index: 999999;
+}
+
+#emoji-selection{
+    width: 150px;
+    height: 350px;
+    background-color: #fff;
+    position: absolute;
+    display: none;
+    z-index: 999999;
+    border-radius:5px;
+}
+
+table{
+    margin: auto;
+}
+
+#load{
+    margin: auto;
 }
