--- a/css/host.css
+++ b/css/host.css
@@ -71,7 +71,6 @@
 
 }
 
-
 #emoji-popup {
     width: 50px;
     height: 50px;
@@ -83,23 +82,35 @@
 }
 
 #emoji-selection{
-    width: 150px;
+    width: 300px;
     height: 350px;
     background-color: #fff;
     position: absolute;
     z-index: 9999999;
-    border-radius:5px;
-    overflow-y: scroll;
+    border-radius: 12px;
+    margin:0 auto;
+    overflow: hidden;
+}
+
+.emoji_sec{
     text-align: center;
+    overflow-y: scroll;
 }
 
-#emoji-selection::-webkit-scrollbar{
-    width: 10px;
-    height: 10px;
+.emoji_sec::-webkit-scrollbar{
+    width: 6px;
+    height: 6px;
 }
 
-#emoji-selection::-webkit-scrollbar-thumb{
-    border-radius:5px;
+.emoji_sec::-webkit-scrollbar-thumb{
+    border-radius: 6px;
+    background-color: #aaa;
+}
+
+#emoji-tray{
+    width: 300px;
+    height: 280px;
+
 }
 
 #emoji-selection table{
@@ -115,4 +126,46 @@
     margin-top: 170px;
     text-align: center;
     vertical-align: middle;
+}
+
+#input-form{
+    left: 10px;
+    bottom: 5px;
+    width: 200px;
+    height: 50px;
+    resize: none;
+    border: 1px solid #AAA;
+    border-radius:5px;
+    position: absolute;
+}
+
+#input-form:focus{
+    outline: none;
+    border: 1px solid #00A0FF;
+}
+
+#input-form::-webkit-scrollbar{
+    width: 6px;
+    height: 6px;
+}
+
+#input-form::-webkit-scrollbar-thumb{
+    border-radius: 6px;
+    background-color: #aaa;
+}
+
+#input-button{
+    right: 10px;
+    bottom: 5px;
+    width: 65px;
+    height: 20px;
+    border: 0;
+    background: #FFD432;
+    border-radius:5px;
+    color: #FFF;
+    position: absolute;
+}
+
+#input-button:hover{
+    background: #DDB210;
 }
