--- a/css/host.css
+++ b/css/host.css
@@ -4,46 +4,44 @@
 
 @keyframes fade-in {
     0% {opacity: 0.0}
-    50% {opacity: 0.5}
     100% {opacity: 1.0}
 }
 
 @keyframes fade-out {
     0% {opacity: 1.0}
-    50% {opacity: 0.5}
     100% {opacity: 0.0}
 }
 
 @keyframes click-in {
     0% {width: 52px; height: 52px; transform: translate(-1px, -1px);}
-    50% {width: 50px; height: 50px;transform: translate(0px, 0px);}
-    100% {width: 46px; height: 46px;transform: translate(2px, 2px);}
+    50% {width: 50px; height: 50px; transform: translate(0px, 0px);}
+    100% {width: 46px; height: 46px; transform: translate(2px, 2px);}
 }
 
 @keyframes click-out {
-    0% {width: 46px; height: 46px;transform: translate(2px, 2px);}
-    50% {width: 50px; height: 50px;transform: translate(0px, 0px);}
+    0% {width: 46px; height: 46px; transform: translate(2px, 2px);}
+    50% {width: 50px; height: 50px; transform: translate(0px, 0px);}
     100% {width: 52px; height: 52px; transform: translate(-1px, -1px);}
 }
 
 @keyframes hover-in {
-    0% {width: 50px; height: 50px;transform: translate(0px, 0px);}
+    0% {width: 50px; height: 50px; transform: translate(0px, 0px);}
     100% {width: 52px; height: 52px; transform: translate(-1px, -1px);}
 }
 
 @keyframes hover-out {
     0% {width: 52px; height: 52px; transform: translate(-1px, -1px);}
-    100% {width: 50px; height: 50px;transform: translate(0px, 0px);}
+    100% {width: 50px; height: 50px; transform: translate(0px, 0px);}
 }
 
 .selection-fade-in{
     animation-name: fade-in;
-    animation-duration: 0.15s;
+    animation-duration: 0.3s;
 }
 
 .selection-fade-out{
     animation-name: fade-out;
-    animation-duration: 0.15s;
+    animation-duration: 0.3s;
 }
 
 .popup-click-hoverin{
@@ -168,4 +166,11 @@
 
 #input-button:hover{
     background: #DDB210;
+}
+
+#length-indicator{
+    right: 90px;
+    bottom: 10px;
+    color: #AAA;
+    position: absolute;
 }
