--- a/css/host.css
+++ b/css/host.css
@@ -2,6 +2,11 @@
  * Copyright (c) 2021 Tyrael, Y. LI
  * */
 
+.emoji-fullscreen-danmaku {
+    overflow: visible !important;
+    /*height: 160px !important;*/
+}
+
 @keyframes fade-in {
     0% {opacity: 0.0}
     100% {opacity: 1.0}
@@ -32,6 +37,16 @@
 @keyframes hover-out {
     0% {width: 52px; height: 52px; transform: translate(-1px, -1px);}
     100% {width: 50px; height: 50px; transform: translate(0px, 0px);}
+}
+
+@keyframes fullscreen-hover-in {
+    0% {opacity: 0.1}
+    100% {opacity: 0.8}
+}
+
+@keyframes fullscreen-hover-out {
+    0% {opacity: 0.8}
+    100% {opacity: 0.1}
 }
 
 .selection-fade-in{
@@ -66,7 +81,18 @@
     animation-name: click-out;
     animation-duration: 0.2s;
     animation-fill-mode: forwards;
+}
 
+.fullscreen-hoverin{
+    animation-name: fullscreen-hover-in;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+.fullscreen-hoverout{
+    animation-name: fullscreen-hover-out;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
 }
 
 #emoji-popup {
@@ -108,7 +134,6 @@
 #emoji-tray{
     width: 300px;
     height: 280px;
-
 }
 
 #emoji-selection table{
@@ -173,4 +198,73 @@
     bottom: 10px;
     color: #AAA;
     position: absolute;
+}
+
+#fullscreen-table{
+    width: inherit;
+    height: 120px;
+    bottom: 40px;
+    background-color: #222;
+    opacity: 0.1;
+    position: absolute;
+    z-index: 9999999;
+    align-items: center;
+    border-radius:5px;
+}
+
+#fullscreen-table table{
+    margin: 0 auto;
+}
+
+#fullscreen-table td{
+    width: 60px;
+    height: 60px;
+}
+
+#fs-emoji-bg{
+    opacity: 0;
+    z-index: -1;
+    width: inherit;
+    height: 160px;
+    position: absolute;
+}
+
+#fullscreen-input{
+    height: 100%;
+    line-height: initial;
+    width: 100%;
+    border: 0;
+    padding: 8px 8px 10px 8px;
+    color: #fff;
+    font-size: 12px;
+    outline: 0;
+    box-sizing: border-box;
+    background: 0 0;
+}
+
+#fullscreen-input::placeholder{
+    color: #fff;
+}
+
+#fullscreen-text-length{
+    color: #d3dadf;
+    right: 8px;
+    position: absolute;
+    user-select: none;
+}
+
+#fullscreen-sub-btn{
+    right: 0;
+    flex-shrink: 0;
+    width: 60px;
+    height: 100%;
+    cursor: pointer;
+    color: #fff;
+    text-align: center;
+    background-color: #23ade5;
+}
+
+#first-child{
+    flex: 1;
+    position: relative;
 }
