--- a/css/host.css
+++ b/css/host.css
@@ -101,7 +101,7 @@
     background-repeat:no-repeat;
     background-position:center;
     background-size: 100% 100%;
-    position: absolute;
+    position: fixed;
     z-index: 9999999;
 }
 
@@ -109,7 +109,7 @@
     width: 300px;
     height: 350px;
     background-color: #fff;
-    position: absolute;
+    position: fixed;
     z-index: 9999999;
     border-radius: 12px;
     margin:0 auto;
