--- a/css/host.css
+++ b/css/host.css
@@ -160,6 +160,7 @@
     border: 1px solid #AAA;
     border-radius:5px;
     position: absolute;
+    padding: 5px 0 0 5px;
 }
 
 #input-form:focus{
