--- a/css/progressbar.css
+++ b/css/progressbar.css
@@ -1,3 +1,4 @@
+/*Copyright (c) 2021 Tyrael, Y. LI*/
 @keyframes mousein {
     0% {height: 2px; transform: translate(0, 0px)}
     100% {height: 4px; transform: translate(0, -1px)}
