--- a/css/bilimain.css
+++ b/css/bilimain.css
@@ -17,7 +17,14 @@
 }
 
 .rua-cross circle, rect{
-    transition: 0.4s;
+    transition: .3s;
+}
+
+.rua-click-cover{
+    width: 100%;
+    height: 100%;
+    top: 0;
+    position: absolute;
 }
 
 
