--- a/css/bilimain.css
+++ b/css/bilimain.css
@@ -1,14 +1,4 @@
 /*Copyright (c) 2021 Tyrael, Y. LI*/
-@keyframes cross-in {
-    0% {opacity: 0.0}
-    100% {opacity: 1.0}
-}
-
-@keyframes cross-out {
-    0% {opacity: 1.0}
-    100% {opacity: 0.0}
-}
-
 .rua-cross{
     left: 6px !important;
     width: 18px !important;
@@ -17,6 +7,9 @@
 }
 
 .rua-cross circle, rect{
+    fill:#fff;
+    opacity:0.9;
+    transform-origin: center;
     transition: .4s;
 }
 
@@ -26,8 +19,3 @@
     top: 0;
     position: absolute;
 }
-
-
-/*.elevator-core .icon{*/
-/*    right: 15px !important;*/
-/*}*/
