add enhanced hidden entry function

--- a/css/readme.css
+++ b/css/readme.css
@@ -72,6 +72,10 @@ thead{
     align-items: center;
 }
 
+.info-block{
+    width: 450px;
+}
+
 @media (prefers-color-scheme: dark) {
     a{
         color: #8cb4f7;
