--- a/css/host.css
+++ b/css/host.css
@@ -266,7 +266,7 @@
     width: 200px;
     height: 50px;
     resize: none;
-    border: 1px solid #AAA;
+    border: 1px solid #DDD;
     border-radius: 5px;
     position: absolute;
     padding: 5px 0 0 5px;
