--- a/css/host.css
+++ b/css/host.css
@@ -225,7 +225,7 @@
     background-position: center;
     background-size: 100% 100%;
     position: fixed;
-    z-index: 9999999;
+    z-index: 999999;
 }
 
 #emoji-selection {
@@ -233,7 +233,7 @@
     height: 350px;
     background-color: #fff;
     position: fixed;
-    z-index: 9999999;
+    z-index: 999999;
     border-radius: 12px;
     margin: 0 auto;
     overflow: hidden;
@@ -381,7 +381,7 @@
 }
 
 #rua-err-bubble{
-    position: absolute;
+    position: fixed;
     height: 35px;
     line-height: 35px;
     font-size: 18px;
@@ -390,6 +390,5 @@
     color: #fff;
     background: #ff5e57;
     transition: 0.4s;
-    left: 70px;
-    bottom: 25px;
+    z-index: 99999999;
 }
