--- a/css/popup.css
+++ b/css/popup.css
@@ -1,5 +1,11 @@
 /*Copyright (c) 2021 Tyrael, Y. LI*/
+:root {
+    color-scheme: light dark;
+/*    for safari popup page. */
+}
+
 body{
+    background: #fff;
     width: 300px;
     height: 400px;
     font-family: system-ui, "PingFang SC", STHeiti, sans-serif;
