--- a/css/readme.css
+++ b/css/readme.css
@@ -79,6 +79,7 @@ thead{
     left:0;
     width: 100%;
     backdrop-filter: saturate(180%) blur(20px);
+    -webkit-backdrop-filter: saturate(180%) blur(20px);
     background-color: rgba(255,255,255,0);
     position: fixed;
 }
