fixed b-coin bug, add setting page

--- a/css/videos.css
+++ b/css/videos.css
@@ -129,7 +129,7 @@
     height: 82px;
 }
 
-.rua-download-block{
+.rua-setting-user-block{
     border-radius: 5px;
     background: var(--bili-pink);
     height: 30px;
