--- a/css/host.css
+++ b/css/host.css
@@ -7,6 +7,10 @@
     /*height: 160px !important;*/
 }
 
+.emoji-fullscreen-danmaku:hover #fullscreen-table{
+    opacity: 0.9;
+}
+
 @keyframes fade-in {
     0% {
         opacity: 0.0
@@ -87,24 +91,6 @@
     }
 }
 
-@keyframes fullscreen-hover-in {
-    0% {
-        opacity: 0.1
-    }
-    100% {
-        opacity: 0.8
-    }
-}
-
-@keyframes fullscreen-hover-out {
-    0% {
-        opacity: 0.8
-    }
-    100% {
-        opacity: 0.1
-    }
-}
-
 .selection-fade-in {
     animation-name: fade-in;
     animation-duration: 0.3s;
@@ -136,18 +122,6 @@
 .popup-click-out {
     animation-name: click-out;
     animation-duration: 0.2s;
-    animation-fill-mode: forwards;
-}
-
-.fullscreen-hoverin {
-    animation-name: fullscreen-hover-in;
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
-}
-
-.fullscreen-hoverout {
-    animation-name: fullscreen-hover-out;
-    animation-duration: 0.5s;
     animation-fill-mode: forwards;
 }
 
@@ -315,11 +289,12 @@
     height: 120px;
     bottom: 40px;
     background-color: #222;
-    opacity: 0.1;
+    opacity: 0.3;
     position: absolute;
     z-index: 9999999;
     align-items: center;
     border-radius: 5px;
+    transition: 0.5s;
 }
 
 #fullscreen-table table {
