--- a/css/comment.css
+++ b/css/comment.css
@@ -1,3 +1,11 @@
+:root{
+    --bg1: #FFFFFF;
+    --bg3: #F1F2F3;
+    --text2: #61666D;
+    --graph_bg_thick:#E3E5E7;
+    --line_regular: #E3E5E7;
+}
+
 .rua-emoji-panel{
     font-family: PingFang SC, HarmonyOS_Regular, Helvetica Neue, Microsoft YaHei, sans-serif;
     font-weight: 400;
@@ -49,6 +57,7 @@
     height: 36px;
     padding: 7px 18px;
     cursor: pointer;
+    user-select: none;
 }
 
 .rua-emoji-slider{
@@ -105,6 +114,7 @@
     display: inline-block;
     border-radius: 4px;
     cursor: pointer;
+    user-select: none;
 }
 
 .rua-emoji-info:hover{
@@ -113,6 +123,25 @@
 
 .rua-emoji-panel-bottom{
     position: fixed;
+}
+
+.rua-disabled-text{
+    position: absolute;
+    color: #555;
+    top: 0;
+    line-height: 68px;
+    text-align: center;
+    width: 100%;
+    max-height: 64px;
+    overflow: hidden;
+}
+
+.rua-arrow{
+    color: var(--2c6ec6e4);
+}
+
+.rua-arrow svg path{
+    fill: currentColor;
 }
 
 .emoji-panel{
